--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <link rel='stylesheet' id='e-animation-pulse-grow-css' href='css/e-animation-pulse-grow.min.css' media='all' />
     <link rel='stylesheet' id='elementor-post-19773-css' href='css/element.css' media='all' />
     <link rel='stylesheet' id='google-fonts-1-css' href='css/font.css' media='all' />
+    <link rel='stylesheet' id='butterfly' href='css/butterfly.css' media='all' />
     <!-- <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin> -->
     <script src="js/jquery.min.js" id="jquery-core-js"></script>
     <script src="js/jquery-migrate.min.js" id="jquery-migrate-js"></script>
@@ -1683,6 +1684,25 @@ function playAudio(){
             </div>
         </div>
     </div>
+    <div class="stage">
+  <div class="mariposa">
+    <div class="mariposa-turn">
+      <div class="mariposa-flutter"></div>
+    </div>
+  </div>
+
+  <div class="mariposa">
+    <div class="mariposa-turn">
+      <div class="mariposa-flutter"></div>
+    </div>
+  </div>
+
+  <div class="mariposa">
+    <div class="mariposa-turn">
+      <div class="mariposa-flutter"></div>
+    </div>
+  </div>
+</div>
     <script type="speculationrules">
         {"prefetch":[{"source":"document","where":{"and":[{"href_matches":"\/*"},{"not":{"href_matches":["\/wp-*.php","\/wp-admin\/*","\/wp-content\/uploads\/*","\/wp-content\/*","\/wp-content\/plugins\/*","\/wp-content\/themes\/hello-elementor\/*","\/*\\?(.+)"]}},{"not":{"selector_matches":"a[rel~=\"nofollow\"]"}},{"not":{"selector_matches":".no-prefetch, .no-prefetch a"}}]},"eagerness":"conservative"}]}
 </script>
@@ -1786,6 +1806,7 @@ function playAudio(){
         transform: translateY(0);
         opacity: 1;
     }
+   
     </style>
     <script>
     function revealin() {
