--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:title" content="The Wedding of Agung &hearts; Titin" />
     <meta property="og:description" content="Minggu, 03 Agustus 2025" />
     <meta property="og:site_name" content="The Wedding of Agung &amp; Titin" />
-    <meta property="og:image" content="https://the-wedding-of-agung-titin.github.io/thewedding/img/img.png" />
+    <meta property="og:image" content="https://the-wedding-of-agung-titin.github.io/img/img.png" />
     <meta property="og:image:width" content="1600" />
     <meta property="og:image:height" content="1600" />
     <meta property="og:image:type" content="image/webp" />
